@@ -1,18 +1,21 @@
 package moze_intel.projecte.emc.mappers.recipe;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import moze_intel.projecte.api.mapper.collector.IMappingCollector;
 import moze_intel.projecte.api.mapper.recipe.INSSFakeGroupManager;
 import moze_intel.projecte.api.mapper.recipe.RecipeTypeMapper;
 import moze_intel.projecte.api.nss.NormalizedSimpleStack;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.world.item.crafting.AbstractCookingRecipe;
 import net.minecraft.world.item.crafting.CraftingRecipe;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.item.crafting.SingleItemRecipe;
-import net.minecraft.world.item.crafting.UpgradeRecipe;
+import net.minecraft.world.item.crafting.SmithingRecipe;
+import net.minecraft.world.item.crafting.SmithingTransformRecipe;
+import net.minecraft.world.item.crafting.SmithingTrimRecipe;
 
 @RecipeTypeMapper(priority = Integer.MIN_VALUE)
 public class FallbackRecipeTypeMapper extends BaseRecipeTypeMapper {
@@ -36,9 +39,10 @@ public class FallbackRecipeTypeMapper extends BaseRecipeTypeMapper {
 	}
 
 	@Override
-	public boolean handleRecipe(IMappingCollector<NormalizedSimpleStack, Long> mapper, Recipe<?> recipe, INSSFakeGroupManager fakeGroupManager) {
-		if (recipe instanceof CraftingRecipe || recipe instanceof AbstractCookingRecipe || recipe instanceof SingleItemRecipe || recipe instanceof UpgradeRecipe) {
-			return super.handleRecipe(mapper, recipe, fakeGroupManager);
+	public boolean handleRecipe(IMappingCollector<NormalizedSimpleStack, Long> mapper, Recipe<?> recipe, RegistryAccess registryAccess, INSSFakeGroupManager fakeGroupManager) {
+		//TODO - 1.20: Should this be the two different vanilla impls or use the SmithingRecipe interface like we are doing now
+		if (recipe instanceof CraftingRecipe || recipe instanceof AbstractCookingRecipe || recipe instanceof SingleItemRecipe || recipe instanceof SmithingRecipe) {
+			return super.handleRecipe(mapper, recipe, registryAccess, fakeGroupManager);
 		}
 		return false;
 	}
@@ -46,10 +50,14 @@ public class FallbackRecipeTypeMapper extends BaseRecipeTypeMapper {
 	@Override
 	protected Collection<Ingredient> getIngredients(Recipe<?> recipe) {
 		Collection<Ingredient> ingredients = super.getIngredients(recipe);
-		if (recipe instanceof UpgradeRecipe upgradeRecipe && ingredients.isEmpty()) {
+		if (ingredients.isEmpty()) {
 			//If the extension of upgrade recipe doesn't override getIngredients (just like vanilla doesn't)
 			// grab the values from the recipe's object itself
-			return Arrays.asList(upgradeRecipe.base, upgradeRecipe.addition);
+			if (recipe instanceof SmithingTransformRecipe transformRecipe) {
+				return List.of(transformRecipe.base, transformRecipe.addition, transformRecipe.template);
+			} else if (recipe instanceof SmithingTrimRecipe trimRecipe) {
+				return List.of(trimRecipe.base, trimRecipe.addition, trimRecipe.template);
+			}
 		}
 		return ingredients;
 	}
